# atd

./: LICENSE  README.md  atd.py  pyproject.toml  tests.py
.github/workflows/: ci.yaml
src/atd/: __init__.py
