[project]
name = "atd"
version = "0.1.0"
description = "the Ability To Duplicate"
readme = "README.md"
authors = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "humanize>=4.12.1",
    "multiformats>=0.3.1.post4",
    "obstore>=0.4.0",
    "pystac>=1.12.1",
    "rasterio>=1.4.3",
    "rio-stac>=0.10.1",
    "stacrs==0.5.6b0",
    "tqdm>=4.67.1",
]

[project.scripts]
atd = "atd:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pycco>=0.6.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "types-tqdm>=4.67.0.20241221",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
python_files = "tests.py"
filterwarnings = ["error", "ignore:datetime.datetime.utcnow:DeprecationWarning"]

[tool.mypy]
files = "atd.py,tests.py"

[[tool.mypy.overrides]]
module = ['rio_stac', 'rasterio']
ignore_missing_imports = true
